infra/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: funds
spec:
  selector:
    name: funds
  ports:
    - name: http
      port: 80
      targetPort: http

---
apiVersion: v1
kind: Service
metadata:
  name: funds-api
spec:
  selector:
    name: funds-api
  ports:
    - name: http
      port: 80
      targetPort: http
